--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,21 +10,20 @@
 }
 
 body {
-	font-family:'Product Sans', Ubuntu, sans-serif !important;
-	background: url(), #eeeeee !important;
+	font-family:'Simplicity', Ubuntu, sans-serif !important;
+	background: url(), #888 !important;
 	background-size: cover !important;
 	background-attachment: fixed !important;
 }
 .texto {
-	color: #000;
+	color: #fff;
 	position: relative;
 	padding: 50px 0;
 	text-align: center;
 	font-weight: 400;
-    z-index: auto;
 }
 .box, .texto h2, .texto p {
-	background: url() #424242;
+	background: url() #110000;
 	display: inline-block;
 	padding: 20px;
 	box-shadow: 0px 1px 2px 0px #757575;
@@ -67,13 +66,6 @@ body {
 	color: #000;
 	border-radius: 5px;
 }
-
-.principal.contenedor {
-    width:90%;
-	max-width:1000%;
-	margin:auto;
-}
-
 .principal article {
 	border-radius: 5px;
 	padding: 20px;
