--- a/css/materialnav.css
+++ b/css/materialnav.css
@@ -1,6 +1,6 @@
 /*
- *ROM-PacMe CSS: materialnav (Material UI Nav Menu)
- *(c) 2015 Rafael PacMe <rafy.pachecomendez@gmail.com>
+ *ROM-PacMe(KillingName Edited) CSS: materialnav (Material UI Nav Menu)
+ *(c) 2015 Team Mayhem <https://github.com/TeamMayhem>
  */
 
 .contenedor2 {
@@ -13,7 +13,7 @@ header {
 	height: auto;
 }
 header .menu2 {
-	background: #8BC34A;
+	background: #585858;
 	overflow: hidden;
 	box-shadow: 0px 1px 2px 0px #757575;
 }
@@ -22,5 +22,4 @@ header .logo2 {
 	text-align: center;
 	font-size: 30px;
 	line-height: 70px;
-    background: #689F38;
 }
