--- a/css/modal.css
+++ b/css/modal.css
@@ -1,106 +1,73 @@
-.wrap {
-  padding: 40px;
-  text-align: center;
+a.open {
+	background-color: #414141;
+	border-radius: 5px;
+	color: #fff;
+	font-size: 1.5em;
+	margin: 20px;
+	padding: 10px 20px;
+	position: absolute;
+	text-decoration: none;
+	text-shadow: 2px 2px 0px #000;
+	-moz-transition:background-color 1s;
 }
-hr {
-  clear: both;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  border: 0;
-  border-top: 1px solid #aaaaaa;
+
+a.open:hover {
+	background-color: #111
 }
-h1 {
-  font-size: 30px;
-  margin-bottom: 40px;
+
+section.modalDialog {
+	background-color: rgba(0,0,0,.5);
+	bottom: 0;
+	top: 0;
+	left: 0;
+	right: 0;
+	opacity: 0;
+	position: fixed;
+	z-index: -2;
+	-moz-transition: opacity 1s;
 }
+
+section.modalDialog:target {
+	opacity: 1;
+}
+
+a.close {
+	background-color: #414141;
+	border-radius: 5px;
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	line-height: 22px;
+	position: absolute;
+	right: 5px;
+	top: 5px;
+	text-align: center;
+	text-decoration: none;
+	width: 28px;
+}
+
+a.close:hover {
+	background-color: #000
+}
+
+section.modal {
+	background-color: #111;
+	box-shadow: 0px 0px 10px #000;
+	border-radius: 5px;
+	color: #fff;
+	margin: 10% auto;
+	padding: 20px;
+	position: relative;
+	width: 400px;
+}
+
+h2 {
+	color: #fff;
+	font-size: 2em;
+	margin-bottom: 10px;
+}
+
 p {
-  margin-bottom: 20px;
-}
-.btn {
-  background: #428bca;
-  border: #357ebd solid 1px;
-  border-radius: 3px;
-  color: #fff;
-  display: inline-block;
-  font-size: 14px;
-  padding: 8px 15px;
-  text-decoration: none;
-  text-align: center;
-  min-width: 60px;
-  position: relative;
-  transition: color .1s ease;
-}
-.btn:hover {
-  background: #357ebd;
-}
-.btn.btn-big {
-  font-size: 18px;
-  padding: 15px 20px;
-  min-width: 100px;
-}
-.btn-close {
-  color: #aaaaaa;
-  font-size: 30px;
-  text-decoration: none;
-  position: absolute;
-  right: 5px;
-  top: 0;
-}
-.btn-close:hover {
-  color: #919191;
-}
-.modal:before {
-  content: "";
-  display: none;
-  background: rgba(0, 0, 0, 0.6);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1000;
-}
-.modal:target:before {
-  display: block;
-}
-.modal:target .modal-dialog {
-  -webkit-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  transform: translate(0, 0);
-  top: 20%;
-}
-.modal-dialog {
-  background: #fefefe;
-  border: #333333 solid 1px;
-  border-radius: 5px;
-  margin-left: -200px;
-  position: fixed;
-  left: 50%;
-  top: -100%;
-  z-index: 1000;
-  width: 360px;
-  -webkit-transform: translate(0, -500%);
-  -ms-transform: translate(0, -500%);
-  transform: translate(0, -500%);
-  -webkit-transition: -webkit-transform 0.3s ease-out;
-  -moz-transition: -moz-transform 0.3s ease-out;
-  -o-transition: -o-transform 0.3s ease-out;
-  transition: transform 0.3s ease-out;
-}
-.modal-body {
-  padding: 20px;
-}
-.modal-header,
-.modal-footer {
-  padding: 10px 20px;
-}
-.modal-header {
-  border-bottom: #eeeeee solid 1px;
-}
-.modal-header h2 {
-  font-size: 20px;
-}
-.modal-footer {
-  border-top: #eeeeee solid 1px;
-  text-align: right;
+	color: #fff;
+	font-size: 1.2em;
 }
